tests/ui/require_indent_divisible_zero.stderr
error: `Divisible` indentation must be non-zero
 --> tests/ui/require_indent_divisible_zero.rs:2:13
  |
2 |       let _ = serde_saphyr::options! {
  |  _____________^
3 | |         require_indent: serde_saphyr::RequireIndent::Divisible(0),
4 | |     };
  | |_____^
  |
  = note: this error originates in the macro `$crate::__serde_saphyr_options_apply` which comes from the expansion of the macro `serde_saphyr::options` (in Nightly builds, run with -Z macro-backtrace for more info)
