tests/ui/require_indent_divisible_zero.rs
fn main() {
    let _ = serde_saphyr::options! {
        require_indent: serde_saphyr::RequireIndent::Divisible(0),
    };
}
